libhdate (1.4.14)

  * Fix --localedir configure option and add a gettext localedir indicator
  	at the configure summary
  * Add Sfirat ha omer function (Patch: Moshe Wagner <moshe.wagner@gmail.com>)
  * Add Erev Yum Kipur to the holidays list 
  	(Bug report: Arnon Sharlin; Patch: Moshe Wagner <moshe.wagner@gmail.com>)
  * Fix Tora readings in diaspora (Patch: Moshe Wagner <moshe.wagner@gmail.com>)
  * Change the type of holiday function to me more descriptive
  	(Patch: Moshe Wagner <moshe.wagner@gmail.com>)
  	
  -- Yaacov Zamir <kzamir@wall.co.il>  Saturday, 17 Oct 2008 22:00
  
libhdate (1.4.12)

  * Add GNU Pascal bindings (Ido Kanner)
  * Add example for GNU pascal
  * change configure flags for pascal from --disable-pascal
      to --disable-fpc and --disable-gpc

  -- Yaacov Zamir <kzamir@wall.co.il>  Saturday, 14 Jun 2008 22:00
  
libhdate (1.4.11)

  * Add Ruby bindings
  * Add PHP bindings
  * Add GPL notice to the example files (Bug report: Baruch Even)
  * Add a patch to print todays date in hcal in bold (Patch: Patrik Nilsson)
  * Fix documentation of files and structs (Bug report: Baruch Even)
  * Update Swedish translation (Thanks: Patrik Nilsson)
  * Fix hdate_get_utc_sun_time_deg 
      function only work in low altitudes (Bug report: Ido Kanner)
  * Update pascal bindings and examples (Patch: Ido Kanner)

  -- Yaacov Zamir <kzamir@wall.co.il>  Saturday, 5 Jan 2008 22:00
  
libhdate (1.4.10)

  * Move to GPL3 (COPYING, AUTHORS)
      - Add Amos Shapir as author in Authors file
      - Update Amos's email
  * Change defult config options (configure.in)
      - Gettext version used now is 0.17
      - Python, Perl, Pascal bindings now built by default
  * Update the man files (docs/man)
      - add man files for c++ language
      - move all man files to docs/man directory
  * Bug fixes
      - Fix Kislev Hebrew translation misspell (Bug report: Ariel Galola)
      - Fix Julian day calculation (Bug report: Afonso Arantes)
  * Add new events