@@ -4,7 +4,7 @@ dnl Set release number
 PACKAGE=libhdate
 LIBHDATE_MAJOR_VERSION=1
 LIBHDATE_MINOR_VERSION=4
-LIBHDATE_MICRO_VERSION=17
+LIBHDATE_MICRO_VERSION=18
 
 VERSION=$LIBHDATE_MAJOR_VERSION.$LIBHDATE_MINOR_VERSION.$LIBHDATE_MICRO_VERSION
 
